# 2026apartmentsearch

./: .env.example  Procfile  README.md  pyproject.toml  railway.json
data/geo/: peninsula_gyms.csv  sf_gyms.csv  sf_polygons.geojson
data/runtime/: alerts.json  listings.json  states.json
n8n/: apartment_search_v1.workflow.json
src/apartment_bot/: __init__.py  api.py  config.py
src/apartment_bot/adapters/: apartments_com.py  base.py  craigslist.py  zillow.py
src/apartment_bot/core/: decisioning.py  filtering.py  models.py  normalize.py  presentation.py  scoring.py  sms.py  state.py  store.py
src/apartment_bot/geo/: loader.py  logic.py
src/apartment_bot/integrations/: google_sheets.py  outreach.py  twilio.py  twilio_webhook.py
src/apartment_bot/orchestration/: cli.py  handlers.py  pipeline.py  sample_data.py  server.py
src/apartment_search_bot.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_craigslist_adapter.py  test_handle_reply_phone_normalization.py  test_state_store_seen.py
